@@ -1,3 +1,9 @@
+2004-09-04  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* ansidecl.h (ATTRIBUTE_SENTINEL): Define.
+	* libiberty.h (concat, reconcat, concat_length, concat_copy,
+	concat_copy2): Use ATTRIBUTE_SENTINEL.
+
 2004-08-13  Alan Modra  <amodra@bigpond.net.au>
 
 	* bfdlink.h (struct bfd_link_callbacks): Remove "error_handler".
